--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
 body{
     margin: 0;
     padding: 0;
@@ -6,6 +7,7 @@ body{
 }
 
 .main{
+    position: relative;
     display: flex;
     width: 100%;
     height: 100%;
@@ -29,7 +31,6 @@ body{
     height: 10%;
     margin-top: 24px;
     flex-direction: row;
-    white-space: space-between;
     align-items: center;
 }
 
@@ -37,6 +38,9 @@ body{
     display: flex;
     width: 90%;
     height: 80%;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
 }
 
 .pom-footer{
@@ -52,15 +56,94 @@ body{
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    width: 36px;
-    height: 40px;
+    width: 90%;
 }
 
 .dot{
     display: flex;
     border-radius: 100%;
     background-color: white;
-    width: 8px;
-    height: 8px;
+    width: 5px;
+    height: 5px;
+    margin-bottom: 0.4vh;
 }
 
+.tmt-img{
+    max-width: 100%;
+    max-height: 100%;
+    
+}
+
+.tmt-img img{ 
+    max-width: 28px;
+    max-height: 28px;
+}
+
+.pom-blank{
+    width: 90%;
+}
+
+.pom-sessions{
+    font-family: 'Nunito', sans-serif;
+    color:  white;
+    font-weight: 300;
+    margin-bottom: 5%;
+    margin-top: 35%;
+}
+.pom-time-next{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+.time{
+    font-family: 'Nunito', sans-serif;
+    color:  white;
+    font-weight: 1000;
+    font-size: 5vh;
+    width: 80%;
+}
+
+.pom-reset{
+    margin-top: 40%;
+}
+.pom-time-next{
+    width: 100%;
+    white-space: space-between;
+}
+.next{
+    width: 10%;
+}
+.pom-time-blank{
+    width: 40%;
+}
+
+.pom-control{
+    cursor: pointer;
+}
+.pom-custom{
+    cursor: pointer;
+}
+.pom-container-settings{
+    display: flex;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0vh;
+    height: 50vh;
+    background-color: rgb(40, 40, 40);
+    border-radius: 48px;
+    transition: width ease-out .2s;
+    flex-direction: column;
+    align-items: center;
+}
+
+.pom-blank-setting{
+    width: 90%;
+    height: 100%;
+}
+.settings-close svg{
+    width: 0;
+    transform: rotate(-180deg);
+    cursor: pointer;
+}
