--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ body{
     display: flex;
     width: 90%;
     height: 10%;
-    margin-bottom: 24px;
+    margin-bottom: 20%;
 
 }
 
@@ -139,11 +139,76 @@ body{
 }
 
 .pom-blank-setting{
+    display: flex;
     width: 90%;
     height: 100%;
+    align-items: center;
+    justify-content: center;
+    margin-left: 36px;
+}
+.pom-blank-setting p {
+    display: none;
+    font-family: 'Nunito', sans-serif;
+    font-size: 2vh;
+    color: white;
 }
 .settings-close svg{
     width: 0;
     transform: rotate(-180deg);
     cursor: pointer;
+}
+
+.studytime-selector,.pausetime-selector{
+    width: 100%;
+    height: 15vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.study-selector,.pause-selector{
+    display: flex;
+    width: 80%;
+    height: 40%;
+    background-color: white;
+    border-radius: 42px;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0px 10px 30px -3px rgba(40,40,40,0.9);
+}
+
+.stsel-selected,.pssel-selected{
+    display: flex;
+    width: 35%;
+    height: 100%;
+    align-items: center;
+    justify-content: flex-end;
+    font-family: 'Nunito', sans-serif;
+    color: rgb(40, 40, 40);
+    font-weight: 500;
+}
+
+.stsel-arrow,.pssel-arrow{
+    display: flex;
+    width: 13%;
+    height: 100%;
+    align-items: center;
+    justify-content: flex-start;
+    margin-top: 0.1vh;
+    margin-left: 0.5vh;
+}
+.stsel-title,.pssel-title{
+    display: flex;
+    width: 50%;
+    height: 100%;
+    align-items: center;
+    justify-content: flex-start;
+    font-family: 'Nunito', sans-serif;
+    color: rgb(40, 40, 40);
+    font-weight: 700;
+    margin-left: 1.5vh;
+}
+
+.pause-selector{
+    margin-top: -8vh;
 }
