--- a/style.css
+++ b/style.css
@@ -174,7 +174,8 @@ body{
     border-radius: 42px;
     justify-content: center;
     align-items: center;
-    box-shadow: 0px 10px 30px -3px rgba(40,40,40,0.9);
+
+    z-index: 1;
 }
 
 .stsel-selected,.pssel-selected{
@@ -196,6 +197,8 @@ body{
     justify-content: flex-start;
     margin-top: 0.1vh;
     margin-left: 0.5vh;
+    cursor: pointer;
+    transition: all 0.4s cubic-bezier(0.93, 0.88, 0.1, 0.8);
 }
 .stsel-title,.pssel-title{
     display: flex;
@@ -211,4 +214,47 @@ body{
 
 .pause-selector{
     margin-top: -8vh;
+    transition: all 0.4s cubic-bezier(0.93, 0.88, 0.1, 0.8);
+}
+.study-options,.pause-options{
+    display: flex;
+    width: 80%;
+    height: 40%;
+    flex-direction: column;
+    filter: url(#goo);
+    z-index: 0;
+} 
+.options{
+    display: flex;
+    width: 100%;
+    height: 100%;
+    background-color: white;
+    border-radius: 42px;
+    justify-content: center;
+    align-items: center;
+    margin-top: -1vh;
+}
+
+.rectangle{
+    height: 60%;
+    width: 5%;
+    background-color: white;
+    margin-top: -5.5vh;
+    margin-left: 23vh;
+    transition: all 0.4s cubic-bezier(0.93, 0.88, 0.1, 0.8);
+    margin-bottom: -3vh;
+}
+.stdop,.psop{
+   display: flex;
+   cursor: pointer;
+   height: 60%;
+   justify-content: center;
+   align-items: center;
+   width: 7vh;
+   transition: background-color 0.4s cubic-bezier(0.93, 0.88, 0.1, 0.8);
+   border-radius: 20px;
+}
+
+.stdop:hover,.psop:hover{
+    background-color: rgba(0, 0, 0, 0.096);
 }
