--- a/style.css
+++ b/style.css
@@ -133,7 +133,7 @@ body{
     height: 50vh;
     background-color: rgb(40, 40, 40);
     border-radius: 48px;
-    transition: width ease-out .2s;
+    transition: width 0.2s cubic-bezier(0.93, 0.88, 0.1, 0.8);
     flex-direction: column;
     align-items: center;
 }
@@ -179,7 +179,7 @@ body{
 }
 
 .stsel-selected,.pssel-selected{
-    display: flex;
+    display: none;
     width: 35%;
     height: 100%;
     align-items: center;
@@ -201,7 +201,7 @@ body{
     transition: all 0.4s cubic-bezier(0.93, 0.88, 0.1, 0.8);
 }
 .stsel-title,.pssel-title{
-    display: flex;
+    display: none;
     width: 50%;
     height: 100%;
     align-items: center;
@@ -222,6 +222,7 @@ body{
     height: 40%;
     flex-direction: column;
     filter: url(#goo);
+    font-family: 'Nunito', sans-serif;
     z-index: 0;
 } 
 .options{
@@ -237,7 +238,7 @@ body{
 
 .rectangle{
     height: 60%;
-    width: 5%;
+    width: 10%;
     background-color: white;
     margin-top: -5.5vh;
     margin-left: 23vh;
@@ -257,4 +258,7 @@ body{
 
 .stdop:hover,.psop:hover{
     background-color: rgba(0, 0, 0, 0.096);
+}
+#opt{
+    display: none;
 }
